<resources>
    <string name="app_name">Beleza Legal</string>
    <string name="action_settings">Configuração</string>
    <string name="welcome_fragment_label">Boas vindas</string>
    <string name="introduction_fragment_label">Introdução</string>
    <string name="consent_fragment_label">Concentimento</string>
    <string name="question1_fragment_label">Pergunta 1</string>
    <string name="question2_fragment_label">Pergunta 2</string>
    <string name="question3_fragment_label">Pergunta 3</string>
    <string name="question4_fragment_label">Pergunta 4</string>
    <string name="question5_fragment_label">Pergunta 5</string>
    <string name="question6_fragment_label">Pergunta 6</string>
    <string name="question7_fragment_label">Pergunta 7</string>
    <string name="question8_fragment_label">Pergunta 8</string>
    <string name="question9_fragment_label">Pergunta 9</string>
    <string name="question10_fragment_label">Pergunta 10</string>
    <string name="question11_fragment_label">Pergunta 11</string>
    <string name="question12_fragment_label">Pergunta 12</string>
    <string name="question13_fragment_label">Pergunta 13</string>
    <string name="question14_fragment_label">Pergunta 14</string>
    <string name="question15_fragment_label">Pergunta 15</string>
    <string name="question16_fragment_label">Pergunta 16</string>
    <string name="question17_fragment_label">Pergunta 17</string>
    <string name="question18_fragment_label">Pergunta 18</string>
    <string name="question19_fragment_label">Pergunta 19</string>
    <string name="question20_fragment_label">Pergunta 20</string>
    <string name="question21_fragment_label">Pergunta 21</string>
    <string name="question22_fragment_label">Pergunta 22</string>
    <string name="question23_fragment_label">Pergunta 23</string>
    <string name="question24_fragment_label">Pergunta 24</string>
    <string name="question25_fragment_label">Pergunta 25</string>
    <string name="question26_fragment_label">Pergunta 26</string>
    <string name="term_fragment_label">Termo de consentimento</string>
    <string name="selfdiagnosis_fragment_label">Autodiagnostico</string>
    <string name="handout_fragment_label">Cartilha</string>
    <string name="dissent_fragment_label">Sem concenso</string>
    <string name="informal_fragment_label">Informal</string>
    <string name="acknowledgements_fragment_label">Agradecimento</string>
    <string name="consent_consenttitle">Termo de Consentimento Livre e Esclarecido </string>
    <string name="consent_text">Os Termos de Consentimento Livre e Esclarecido (TCLE) têm por
        finalidade possibilitar, aos sujeitos da pesquisa, o mais amplo esclarecimento sobre a
        investigação a ser realizada, para que a sua manifestação de vontade no sentido de
        participar (ou não), seja efetivamente livre e consciente.</string>
    <string name="consent_1">Possuo 18 anos completo no momento da pesquisa</string>
    <string name="consent_2">Estou sendo convidado e participo voluntariamente da pesquisa</string>
    <string name="consent_3">Estou ciente das informações indicas acima e que as respostas coletadas
        serão disponibilizadas tão somente para a pesquisa</string>
    <string name="Dissent">Você precisa estar de acordo com todos os items para continuar.</string>
    <string name="acknowledge_text">Empreendedor da Beleza \n
    Queremos agradecer por sua participação. \n
    Nosso compromisso é aprimorar e divulgar as legislações vigentes, visando proporcionar soluções
        efetivas e sustentáveis para o setor da beleza. \n
    Contamos com o seu apoio para promover um ambiente regulatório mais favorável e dinâmico. \n
    Muito Obrigada, Beleza Legal! </string>
    <string name="email">Email</string>
    <string name="question1">Você é:</string>
    <string name="question2">Qual a sua principal atividade como Profissional de Beleza?</string>
    <string name="question3">Sexo</string>
    <string name="question4">Escolaridade</string>
    <string name="question5">Faixa Etária</string>
    <string name="question6">Sua cor ou raça é:</string>
    <string name="question7">Qual o seu nível de conhecimento da Lei do Microeemprendedor individual
        (MEI)?</string>
    <string name="question8">Qual o seu nível de conhecimento da Lei Salão Parceiro?</string>
    <string name="question9">Você é formalizado como Microempreendedor Individual (MEI)?</string>
    <string name="question10">Por que você optou por não se formalizar?</string>
    <string name="question11">Como empreendedor da beleza, qual é a sua percepção em relação à
        formalização do seu negócio?</string>
    <string name="question12">Quem é responsável pelo recolhimento do DAS (Documento de Arrecadação
        do Simples Nacional) no seu contrato de parceria com o salão de beleza?</string>
    <string name="question13">Como MEI profissional da beleza que trabalha em um salão de beleza,
        foi elaborado o contrato de parceria com o salão?</string>
    <string name="question14">Quando da elaboração do contrato de parceria, qual foi o impacto
        percebido por você em relação à possibilidade de auxiliar na definição dos direitos e
        deveres do acordo, bem como trabalhar em outro salão de beleza e ter seus próprios
        clientes?</string>
    <string name="question15">Apesar de ter um contrato de parceria, você executa atividades
        diferentes daquelas especificadas no contrato? Por exemplo, se você é contratado como
        manicure, mas acaba realizando atividades de recepcionista.</string>
    <string name="question16">Quais são os benefícios proporcionados pela lei do salão parceiro aos
        profissionais de beleza e que você tem conhecimento?</string>
    <string name="question17">O contrato de parceria entre o salão de beleza e o profissional foi
        homologado no sindicato profissional ou na Superintendência Regional do Trabalho do
        respectivo Estado, perante duas testemunhas?</string>
    <string name="question18">Você, como profissional da beleza, possui conhecimento das diferenças
        entre um profissional parceiro e um profissional empregado?</string>
    <string name="question19">Frequentemente você recolhe o DAS:</string>
    <string name="question20">Anualmente o MEI precisa entregar a Declaração Anual, que é uma
        obrigação do empreendedor. Você:</string>
    <string name="question21">Você faz o controle e/ou mantém o Relatório Mensal de Receitas Brutas
        para comprovação das receitas, anexando todas as notas fiscais recebidas e
        emitidas?</string>
    <string name="question22">Você tem uma conta bancária específica para o seu MEI? Qual a
        importância de separar as finanças da pessoa jurídica e da pessoa física para o profissional
        parceiro?</string>
    <string name="question23">Você como MEI, sabe distinguir faturamento de lucro?</string>
    <string name="question24">Você emite nota fiscal ao salão de beleza pelo serviço prestado, de
        acordo com os valores a receber da sua comissão?</string>
    <string name="question25">A Lei do Salão Parceiro prevê que todo pagamento pelos serviços
        prestados deve ser feito diretamente ao salão de beleza, e não diretamente a você como
        profissional parceiro. Essa condição está de acordo com o que o salão de beleza
        faz?</string>
    <string name="question26">Você como profissional MEI tem buscado cursos de formação e
        capacitação para aprimorar seus conhecimentos em sua área de atuação e gestão do
        negócio?</string>
    <string-array name="answer1">
        <item>Profissional da beleza que trabalha em um salão de beleza</item>
        <item>Profissional da beleza que tem seu próprio salão</item>
        <item>Profissional da beleza que trabalha em casa e/ou a domicílio</item>
        <item>Estudante do ramo da beleza</item>
        <item>Dono de salão de beleza</item>
    </string-array>
    <string-array name="answer2">
        <item>Cabeleireiro (a)</item>
        <item>Manicure / pedicure</item>
        <item>Depilador (a)</item>
        <item>Barbeiro</item>
        <item>Maquiador (a)</item>
        <item>Esteticista</item>
        <item>Outros</item>
    </string-array>
    <string-array name="answer3">
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>
    <string-array name="answer4">
        <item>Fundamental incompleto</item>
        <item>Fundamental completo</item>
        <item>Médio incompleto</item>
        <item>Médio completo</item>
        <item>Superior incompleto</item>
        <item>Superior completo</item>
        <item>Pós-graduado/ mestrado</item>
    </string-array>
    <string-array name="answer5">
        <item>Até 24 anos</item>
        <item>De 25 até 35 anos</item>
        <item>De 36 até 45 anos</item>
        <item>De 46 até 55 anos</item>
        <item>De 56 até 65 anos</item>
        <item>De 56 até 65 anos</item>
        <item>Acima de 65 anos</item>
        <item>Não quero informar</item>
    </string-array>
    <string-array name="answer6">
        <item>Branca</item>
        <item>Preta</item>
        <item>Amarela (oriental/asiático)</item>
        <item>Parda</item>
        <item>Indígena</item>
        <item>Não quero informar</item>
    </string-array>
    <string-array name="answer7">
        <item>Conheço e aplico</item>
        <item>Conheço e aplico em parte</item>
        <item>Conheço, mas aplico pouco</item>
        <item>Conheço, mas não aplico</item>
        <item>Não conheço</item>
    </string-array>
    <string-array name="answer8">
        <item>Conheço e aplico</item>
        <item>Conheço e aplico em parte</item>
        <item>Conheço, mas aplico pouco</item>
        <item>Conheço, mas não aplico</item>
        <item>Não conheço</item>
    </string-array>
    <string-array name="answer9">
        <item>Sim </item>
        <item>Não</item>
        <item>Sou formalizo em outra categoria (por exemplo, empresa do Simples Nacional)</item>
    </string-array>
    <string-array name="answer10">
        <item>Sempre trabalhei assim e não vejo benefício em me formalização</item>
        <item>Acredito que ganho mais sendo informal.</item>
        <item>A legislação é confusa e de difícil aplicação.</item>
        <item>Os salões de beleza não adotam a formalização por completo e, por esse motivo, prefiro não me formalizar.</item>
        <item>Estou estudando ainda, só vou me formalizar depois</item>
        <item>Outros motivos pessoais que me levaram a não buscar a formalização.</item>
    </string-array>
    <string-array name="answer11">
        <item>Trouxe benefícios e vantagens significativas.</item>
        <item>Foi positivo, mas ainda não explorei totalmente seus benefícios.</item>
        <item>Não tenho uma opinião clara sobre a formalização do empreendedor da beleza.</item>
        <item>Me formalizei porque o salão de beleza exigiu a documentação de MEI</item>
        <item>Não tenho uma percepção clara ou minha percepção é indefinida, o que pode resultar em situações de risco ou prejuízo para o meu negócio.</item>
    </string-array>
    <string-array name="answer12">
        <item>O salão de beleza desconta da minha comissão, sendo responsável pelo recolhimento</item>
        <item>Eu sou responsável pelo recolhimento do DAS.</item>
        <item>O recolhimento do DAS é compartilhado entre mim e o salão de beleza</item>
        <item>Não tenho certeza ou não sei quem é responsável pelo recolhimento do DAS</item>
        <item>Apesar de trabalhar em salão de beleza, não possuo contrato de parceria.</item>
        <item>Não trabalho em salão de beleza, trabalho por conta própria e por isso sou responsável pelo recolhimento do DAS.</item>
    </string-array>
    <string name="next">Próximo</string>
    <string name="required_text">Required</string>
</resources>